--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trendmicro/react-navs",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Trend Micro Components: React Navs",
   "main": "lib/index.js",
   "files": [
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@trendmicro/react-anchor": "^0.5.2",
+    "chained-function": "^0.5.0",
     "classnames": "^2.2.5",
     "react-addons-shallow-compare": "^0.14.0 || ^15.0.0"
   },
