--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,11 @@
   "name": "@trendmicro/react-navs",
   "description": "Trend Micro Components: React Navs",
   "authors": [
-    "Cheton Wu <cheton_wu@trend.com.tw>"
+    {
+      "name": "Cheton Wu",
+      "email": "cheton_wu@trend.com.tw",
+      "homepage": "https://github.com/cheton"
+    }
   ],
   "homepage": "https://github.com/trendmicro-frontend/react-navs",
   "snapshots": [],
