--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-jsx-a11y": "~2.2.3",
     "eslint-plugin-react": "~6.10.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "~0.10.0",
     "html-webpack-plugin": "~2.28.0",
     "http-server": "~0.9.0",
     "json-loader": "~0.5.4",
