--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "stylus-loader": "~2.5.0",
     "tap": "~10.2.0",
     "trendmicro-ui": "~0.2.0",
+    "url-loader": "~0.5.7",
     "webpack": "~2.2.1",
     "webpack-dev-server": "~2.4.1"
   }
