--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
   },
   "dependencies": {
     "@trendmicro/react-anchor": "^0.5.2",
-    "@trendmicro/react-dropdown": "^0.5.0",
+    "@trendmicro/react-dropdown": "^0.6.1",
     "chained-function": "^0.5.0",
     "classnames": "^2.2.5",
     "react-addons-shallow-compare": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "@trendmicro/react-buttons": "^1.0.0-alpha.2",
+    "@trendmicro/react-buttons": "~1.0.0",
     "babel-cli": "~6.23.0",
     "babel-core": "~6.23.1",
     "babel-eslint": "~7.1.1",
@@ -62,31 +62,31 @@
     "babel-preset-es2015": "~6.22.0",
     "babel-preset-react": "~6.23.0",
     "babel-preset-stage-0": "~6.22.0",
-    "clean-css": "~4.0.3",
-    "clean-css-cli": "~4.0.0",
+    "clean-css": "~4.0.8",
+    "clean-css-cli": "~4.0.8",
     "coveralls": "~2.11.16",
-    "css-loader": "~0.26.1",
-    "eslint": "~3.16.0",
+    "css-loader": "~0.26.2",
+    "eslint": "~3.16.1",
     "eslint-config-trendmicro": "~0.5.1",
     "eslint-loader": "~1.6.3",
     "eslint-plugin-import": "~2.2.0",
     "eslint-plugin-jsx-a11y": "~2.2.3",
     "eslint-plugin-react": "~6.10.0",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "~0.10.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "~0.10.1",
     "html-webpack-plugin": "~2.28.0",
     "http-server": "~0.9.0",
     "json-loader": "~0.5.4",
     "nib": "~1.1.2",
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0",
-    "style-loader": "~0.13.1",
+    "style-loader": "~0.13.2",
     "stylint": "~1.5.9",
     "stylint-loader": "~1.0.0",
     "stylus-loader": "~2.5.0",
-    "tap": "~10.2.0",
-    "trendmicro-ui": "~0.2.0",
-    "url-loader": "~0.5.7",
+    "tap": "~10.3.0",
+    "trendmicro-ui": "~0.3.0",
+    "url-loader": "~0.5.8",
     "webpack": "~2.2.1",
     "webpack-dev-server": "~2.4.1"
   }
