--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trendmicro/react-navs",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Trend Micro Components: React Navs",
   "main": "lib/index.js",
   "files": [
@@ -74,6 +74,7 @@
     "eslint-plugin-react": "~6.10.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "~0.10.1",
+    "find-imports": "~0.5.1",
     "html-webpack-plugin": "~2.28.0",
     "http-server": "~0.9.0",
     "json-loader": "~0.5.4",
