--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trendmicro/react-navs",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "description": "Trend Micro Components: React Navs",
   "main": "lib/index.js",
   "files": [
@@ -39,6 +39,7 @@
   },
   "homepage": "https://github.com/trendmicro-frontend/react-navs",
   "keywords": [
+    "navs",
     "react",
     "react-navs"
   ],
@@ -47,49 +48,49 @@
   },
   "dependencies": {
     "@trendmicro/react-anchor": "^0.5.2",
-    "@trendmicro/react-dropdown": "^0.6.3",
+    "@trendmicro/react-dropdown": "^0.6.5",
     "chained-function": "^0.5.0",
     "classnames": "^2.2.5",
     "react-addons-shallow-compare": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "@trendmicro/react-buttons": "~1.0.0",
-    "babel-cli": "~6.23.0",
-    "babel-core": "~6.23.1",
-    "babel-eslint": "~7.1.1",
-    "babel-loader": "~6.3.2",
+    "@trendmicro/react-buttons": "~1.0.1",
+    "babel-cli": "~6.24.0",
+    "babel-core": "~6.24.0",
+    "babel-eslint": "~7.2.1",
+    "babel-loader": "~6.4.1",
     "babel-plugin-transform-decorators-legacy": "~1.3.4",
-    "babel-preset-es2015": "~6.22.0",
+    "babel-preset-es2015": "~6.24.0",
     "babel-preset-react": "~6.23.0",
     "babel-preset-stage-0": "~6.22.0",
-    "clean-css": "~4.0.8",
-    "clean-css-cli": "~4.0.8",
-    "coveralls": "~2.11.16",
-    "css-loader": "~0.26.2",
-    "eslint": "~3.16.1",
+    "clean-css": "~4.0.10",
+    "clean-css-cli": "~4.0.10",
+    "coveralls": "~2.12.0",
+    "css-loader": "~0.27.3",
+    "eslint": "~3.18.0",
     "eslint-config-trendmicro": "~0.5.1",
-    "eslint-loader": "~1.6.3",
+    "eslint-loader": "~1.7.0",
     "eslint-plugin-import": "~2.2.0",
     "eslint-plugin-jsx-a11y": "~2.2.3",
-    "eslint-plugin-react": "~6.10.0",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "eslint-plugin-react": "~6.10.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "~0.10.1",
-    "find-imports": "~0.5.1",
+    "find-imports": "~0.5.2",
     "html-webpack-plugin": "~2.28.0",
     "http-server": "~0.9.0",
     "json-loader": "~0.5.4",
     "nib": "~1.1.2",
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0",
-    "style-loader": "~0.13.2",
+    "style-loader": "~0.16.0",
     "stylint": "~1.5.9",
     "stylint-loader": "~1.0.0",
-    "stylus-loader": "~2.5.0",
+    "stylus-loader": "~3.0.1",
     "tap": "~10.3.0",
-    "trendmicro-ui": "~0.3.0",
+    "trendmicro-ui": "~0.4.0",
     "url-loader": "~0.5.8",
-    "webpack": "~2.2.1",
-    "webpack-dev-server": "~2.4.1",
-    "which": "~1.2.12"
+    "webpack": "~2.3.2",
+    "webpack-dev-server": "~2.4.2",
+    "which": "~1.2.14"
   }
 }
