Fix IE11 Symbol.iterator not defined issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trendmicro/react-navs",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "description": "Trend Micro Components: React Navs",
   "main": "lib/index.js",
   "files": [
@@ -47,30 +47,29 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "dependencies": {
-    "@trendmicro/react-anchor": "^0.5.4",
-    "@trendmicro/react-dropdown": "^0.6.9",
+    "@trendmicro/react-anchor": "^0.5.5",
+    "@trendmicro/react-dropdown": "^0.6.11",
     "chained-function": "^0.5.0",
     "classnames": "^2.2.5",
-    "prop-types": "^15.5.8",
-    "react-addons-shallow-compare": "^0.14.0 || ^15.0.0"
+    "prop-types": "^15.5.8"
   },
   "devDependencies": {
-    "@trendmicro/react-buttons": "~1.0.3",
-    "babel-cli": "~6.24.0",
-    "babel-core": "~6.24.0",
-    "babel-eslint": "~7.2.1",
+    "@trendmicro/react-buttons": "~1.0.4",
+    "babel-cli": "~6.24.1",
+    "babel-core": "~6.24.1",
+    "babel-eslint": "~7.2.2",
     "babel-loader": "~6.4.1",
     "babel-plugin-transform-decorators-legacy": "~1.3.4",
-    "babel-preset-es2015": "~6.24.0",
+    "babel-preset-es2015": "~6.24.1",
     "babel-preset-react": "~6.24.1",
     "babel-preset-stage-0": "~6.24.1",
-    "clean-css": "~4.0.10",
-    "clean-css-cli": "~4.0.10",
+    "clean-css": "~4.0.12",
+    "clean-css-cli": "~4.0.12",
     "coveralls": "~2.13.0",
     "css-loader": "~0.28.0",
     "eslint": "~3.19.0",
     "eslint-config-trendmicro": "~0.5.1",
-    "eslint-loader": "~1.7.0",
+    "eslint-loader": "~1.7.1",
     "eslint-plugin-import": "~2.2.0",
     "eslint-plugin-jsx-a11y": "~2.2.3",
     "eslint-plugin-react": "~6.10.3",
@@ -83,11 +82,11 @@
     "nib": "~1.1.2",
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0",
-    "style-loader": "~0.16.0",
+    "style-loader": "~0.16.1",
     "stylint": "~1.5.9",
     "stylint-loader": "~1.0.0",
     "stylus-loader": "~3.0.1",
-    "tap": "~10.3.0",
+    "tap": "~10.3.2",
     "trendmicro-ui": "~0.4.0",
     "url-loader": "~0.5.8",
     "webpack": "~2.4.1",
