--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-navs"
   ],
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^0.14.0 || >=15.0.0"
   },
   "dependencies": {
     "@trendmicro/react-anchor": "^0.5.5",
@@ -80,8 +80,8 @@
     "http-server": "~0.10.0",
     "json-loader": "~0.5.4",
     "nib": "~1.1.2",
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "react": "^0.14.0 || >=15.0.0",
+    "react-dom": "^0.14.0 || >=15.0.0",
     "style-loader": "~0.18.2",
     "stylint": "~1.5.9",
     "stylint-loader": "~1.0.0",
