--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "lib"
   ],
   "scripts": {
-    "prepublish": "npm run eslint && npm test && npm run clean && npm run bowersync && npm run build && npm run build-examples",
+    "prepublish": "npm run eslint && npm test && npm run clean && npm run bowersync && npm run build && npm run styleguide:build",
     "bowersync": "./scripts/bowersync",
     "build": "webpack && npm run cleancss",
     "build-examples": "cd examples; webpack",
-    "clean": "rm -f {lib,dist}/*",
+    "clean": "rm -rf {lib,dist,docs}/*",
     "cleancss": "cleancss -o dist/react-navs.min.css dist/react-navs.css",
     "demo": "http-server -p 8000 docs/",
     "eslint": "eslint --ext .js --ext .jsx examples src test",
     "test": "tap test/*.js --node-arg=--require --node-arg=babel-register --node-arg=--require --node-arg=babel-polyfill",
     "coveralls": "tap test/*.js --coverage --coverage-report=text-lcov --nyc-arg=--require --nyc-arg=babel-register --nyc-arg=--require --nyc-arg=babel-polyfill | coveralls",
-    "dev": "cd examples; webpack-dev-server --hot --inline --host 0.0.0.0 --port 8000 --content-base ../docs"
+    "dev": "cd examples; webpack-dev-server --hot --inline --host 0.0.0.0 --port 8000 --content-base ../docs",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "repository": {
     "type": "git",
@@ -82,8 +84,10 @@
     "http-server": "~0.11.1",
     "jsdom": "~11.5.1",
     "nib": "~1.1.2",
+    "path": "^0.12.7",
     "react": "~16.4.2",
     "react-dom": "~16.4.2",
+    "react-styleguidist": "^7.3.6",
     "style-loader": "~0.19.1",
     "stylint": "~1.5.9",
     "stylint-loader": "~1.0.0",
